# Text_API_and_observability

./: .gitignore  Dockerfile  docker-compose.yaml  loki.yml  prometheus.yml  promtail.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: automatic_tests.yaml
grafana/dashboards/: 16110_rev4.json
grafana/provisioning/datasources/: datasources.yml
src/simple_text_api/: main.py
src/simple_text_api/config/: conf.py
src/simple_text_api/db/: database.py
src/simple_text_api/services/: clean_text.py  text_analysis.py
src/simple_text_api/utils/: logging.py
tests/: conftest.py  test_analysis_text.py  test_api.py  test_clean_text.py
